--- a/src/components/Layouts/DefaultLayout/Default.module.scss
+++ b/src/components/Layouts/DefaultLayout/Default.module.scss
@@ -9,6 +9,7 @@
 .container {
     width: var(--default-layout-width);
     display: flex;
+    margin-top: var(--header-height);
 }
 
 .content {
