--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -18,6 +18,9 @@
     padding-bottom: 8px;
 }
 
+.scrollable {
+    overflow-y: auto;
+}
 //header
 .header {
     display: flex;
