--- a/src/components/Popper/Wrapper/Wrapper.module.scss
+++ b/src/components/Popper/Wrapper/Wrapper.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
     // position: absolute;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-height: min((100vh - 96px) - 60px, 734px);
     min-height: 100px;
